k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page
  annotations:
    kubernetes.io/tls-acme: "true"
    konghq.com/preserve-host: "true"
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: platform.vee.codes
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: landing-page
                port:
                  number: 80
